# raggy_rag

./: .env  Makefile  main.py  pyproject.toml
src/: config.py
src/infrastructure/qdrant/: qdrant_vectorstore.py
src/infrastructure/supabase/: create_db.py  init_session.py
src/models/: article_models.py  sql_models.py  vectorstore_models.py
src/utils/: logger_util.py
