[project]
name = "raggy-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.7.3",
    "langchain-text-splitters>=1.0.0",
    "loguru>=0.7.3",
    "numpy>=2.3.5",
    "prefect>=3.6.4",
    "psutil>=7.1.3",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.16.1",
    "sqlalchemy>=2.0.44",
]
